# mineroi

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: demo.yaml
mineroi/: __init__.py  api.py  calculator.py  cli.py  gpu_data.py  models.py  price_fetcher.py
tests/: test_api.py  test_calculator.py  test_cli.py  test_gpu_data.py  test_models.py
